[package]
name = "moo-math"
version = "0.1.0"
edition = "2021"
authors = ["boon4681dev@gmail.com"]
description = "A simple math interpreter"
license = "MIT/Apache-2.0"
repository = "https://github.com/boon4681/moo-math"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
