[package]
name = "moo-math"
version = "0.1.1"
edition = "2021"
authors = ["boon4681dev@gmail.com"]
description = "A simple math interpreter"
license = "MIT/Apache-2.0"
repository = "https://github.com/boon4681/moo-math"
homepage = "https://www.boon4681.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "moo"
harness = false